# LS2D

./: KNOWN_ISSUES.md  LS2D.py  MANIFEST.in  README.md  __init__.py  pyproject.toml  update_header.py
cases/: grid.py  microhh_tools.py  slurm.py
cases/Cabauw_201608/: LS2D.py  cabauw.ini
cases/Cabauw_20180811/: LS2D.py  cabauw.ini  validate.py
cases/MEMO_fieldexp/: LS2D_MEMO.py  memo.ini
cases/atto/: LS2D.py  atto.ini
cases/barbados/: LS2D.py  barbados.ini
cases/cabauw_201608/: LS2D.py  cabauw.ini  cabauw_pr.ini  stats_LES_obs.py  validate.py
cases/cabauw_20180811/: LS2D.py  LS2D_hires_force.py  cabauw.ini  validate.py
cases/cabauw_mirjam/: LS2D.py  cabauw.ini
cases/cabauw_scinti/: LS2D.py  cabauw_nrt.ini.base
cases/k34/: LS2D.py  k34.ini
ecmwf/: IFS_tools.py  __init__.py  download_era5.py  era_tools.py  read_ERA5.py  read_era5.py
examples/: example_1.py  example_cams.py  example_era5.py  example_logger.py  vertical_grids.py
examples/dales/: cabauw_input.py  dales_ls2d_tools.py
examples/microhh/: cabauw.ini.base  cabauw_input.py  link_lookup_tables.sh  microhh_ls2d_tools.py  microhh_tools.py
ls2d/: __init__.py
ls2d/ecmwf/: IFS_tools.py  __init__.py  download_cams.py  download_era5.py  era_tools.py  patch_cds_ads.py  patch_era5.py  read_cams.py  read_era5.py
ls2d/src/: finite_difference.py  grid.py  logger.py  messages.py  (+2 more)
misc/: update_header.py
src/: IFS_tools.py  L137_grid.txt  conventions.py  download_ERA5.py  finite_difference.py  messages.py  read_ERA5.py  spatial_tools.py  time_tools.py
util/: grid.py  microhh_tools.py  slurm.py
(+25 files in other folders)
